# ssp21-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile-mcss  README.md  Ssp21Config.cmake  astyle.cfg  cppcheck-supressions.txt  example_proxy_config.txt  format-cpp.sh  index.html
.circleci/: config.yml
cmake/: ClangFormat.cmake  Findsodium.cmake  settings.cmake
cmake/cross/: arm-linux-gnuabihf.cmake  uc8100-gcc-4.9.cmake
cmake/inc/: posix.cmake  sodium.cmake  windows.cmake
cmake/old/: sodium.cmake
codegen/: pom.xml
config/: example_proxy_config_certificates.txt  example_proxy_config_preshared_keys.txt  example_proxy_config_qkd.txt  example_proxy_config_shared_secret.txt
cpp/exe/icftool/: Actions.cpp  Actions.h  CMakeLists.txt  ConsolePrinter.h  Program.cpp  Program.h  UserInput.cpp  UserInput.h  main.cpp
cpp/exe/proxy/: ASIOLayerBase.h  ASIOLowerLayer.h  ASIOUpperLayer.h  AsioLowerLayer.h  AsioUpperLayer.h  CMakeLists.txt  ConfigField.h  ConfigKeys.h  ConfigProperties.h  ConfigReader.cpp  ConfigReader.h  ConfigSection.cpp  ConfigSection.h  ExceptionMacros.h  Executor.cpp  Executor.h  IAsioLayer.h  PluginFactory.cpp  PluginFactory.h  Proxy.cpp  Proxy.h  ProxyConfig.h  SectionException.h  Session.cpp  Session.h  StackFactory.h  main.cpp
cpp/exe/proxy/src/: AsioLowerLayer.h  AsioUpperLayer.h  ConfigReader.cpp  ConfigReader.h  IAsioLayer.h  IAsioSocketWrapper.h  IPEndpoint.cpp  IPEndpoint.h  IProxySession.h  LogConfig.cpp  LogConfig.h  ProxyConfig.cpp  ProxyConfig.h  ProxySessionFactory.h  Session.cpp  Session.h  StackConfigReader.cpp  StackConfigReader.h  StackFactory.h  YAMLHelpers.cpp  YAMLHelpers.h  main.cpp
cpp/exe/proxy/src/qkd/: IQKDSource.h  QIXQKDSource.cpp  QIXQKDSource.h  QKDSourceRegistry.cpp  QKDSourceRegistry.h
cpp/exe/proxy/src/tcp/: AsioTcpSocketWrapper.h  TcpConfig.cpp  TcpConfig.h  TcpProxySession.cpp  TcpProxySession.h
cpp/exe/proxy/src/udp/: AsioUdpSocketWrapper.h  UdpConfig.cpp  UdpConfig.h  UdpProxySession.cpp  UdpProxySession.h
cpp/exe/proxy/tcp/: AsioTcpSocketWrapper.h  TcpProxy.cpp  TcpProxy.h  TcpProxyConfig.h
cpp/exe/proxy/udp/: AsioUdpSocketWrapper.h  UdpProxy.cpp  UdpProxy.h  UdpProxyConfig.h
cpp/libs/qix/: CMakeLists.txt
cpp/libs/qix/include/qix/: AsyncQIXFrameReader.h  IQIXFrameHandler.h  QIXFrame.h  QIXFrameParser.h  QIXFrameReader.h  QIXFrameWriter.h  QIXKeyCache.h  QIXKeyStore.h  SerialSettings.h
cpp/libs/qix/src/: AsyncQIXFrameReader.cpp  QIXFrameParser.cpp  QIXFrameReader.cpp  QIXFrameWriter.cpp  QIXKeyCache.cpp  QIXKeyStore.cpp
cpp/libs/qix/tests/: CMakeLists.txt  ParserTestSuite.cpp  main.cpp
cpp/libs/sodium/: CMakeLists.txt
cpp/libs/sodium/include/sodium/: Backend.h  CryptoBackend.h  SodiumBackend.h
cpp/libs/sodium/src/: Backend.cpp  CryptoBackend.cpp  HKDF.h
cpp/libs/sodium/tests/: CMakeLists.txt  Curve25519TestSuite.cpp  SHA256TestSuite.cpp  SecureMemoryTestSuite.cpp  main.cpp
cpp/libs/ssp21/: CMakeLists.txt
cpp/libs/ssp21/include/ssp21/crypto/: BufferTypes.h  Chain.h  Constants.h  Crypto.h  CryptoBackend.h  CryptoLayerConfig.h  CryptoSuite.h  CryptoTypedefs.h  EnumField.h  ICertificateHandler.h  ICryptoBackend.h  IKeyLookup.h  IKeySource.h  IMessagePrinter.h  IntegerField.h  KeyRecord.h  SeqByteField.h  SeqStructField.h  StaticKeys.h  Statistics.h  VLength.h
cpp/libs/ssp21/include/ssp21/link/: Addresses.h  CastagnoliCRC32.h  LinkConstants.h
cpp/libs/ssp21/include/ssp21/stack/: Factory.h  ILowerLayer.h  IStack.h  IUpperLayer.h  LogLevels.h  Version.h
cpp/libs/ssp21/include/ssp21/util/: ErrorCategory.h  Exception.h  ICollection.h  PrintHex.h  SecureDynamicBuffer.h  SecureFile.h  SequenceTypes.h  SerializationUtils.h  StringUtil.h
cpp/libs/ssp21/src/: IFrameWriter.cpp  IFrameWriter.h  IWritable.h  RawFrameWriter.cpp  RawFrameWriter.h
cpp/libs/ssp21/src/crypto/: AlgorithmSet.h  Algorithms.cpp  Algorithms.h  BufferTypes.cpp  Chain.cpp  Crypto.cpp  CryptoLayer.cpp  CryptoLayer.h  EnumField.h  FlagsPrinting.cpp  FlagsPrinting.h  FormatResult.h  HandshakeHasher.cpp  HandshakeHasher.h  ICertificateHandler.cpp  ICryptoBackend.cpp  IInitiatorHandshake.h  IMessage.h  IMessageHandler.h  IResponderHandshake.h  ISessionMode.h  IndustrialCertificateHandler.cpp  IndustrialCertificateHandler.h  Initiator.cpp  Initiator.h  InitiatorHandshakeStates.cpp  InitiatorHandshakeStates.h  InitiatorHandshakes.cpp  InitiatorHandshakes.h  IntegerField.h  KeyRecord.cpp  LogLevels.cpp  LogMessagePrinter.cpp  LogMessagePrinter.h  MacAdapters.h  MessageFormatter.h  MessageOnlyFrameWriter.h  MessageParser.h  MessagePrinting.h  Nonce.h  (+37 more)
cpp/libs/ssp21/src/link/: CastagnoliCRC32.cpp  CastagnoliCRC32.h  LinkFrameWriter.cpp  LinkFrameWriter.h  LinkLayer.cpp  LinkLayer.h  LinkParser.cpp  LinkParser.h
cpp/libs/ssp21/src/stack/: Factory.cpp  LinkCryptoStack.h  Version.cpp
cpp/libs/ssp21/src/util/: SecureFile.cpp
cpp/libs/ssp21/tests/: CMakeLists.txt  CRCTestSuite.cpp  ChainVerificationTestSuite.cpp  InitiatorTestSuite.cpp  LinkFormatterTestSuite.cpp  LinkLayerTestSuite.cpp  LinkParserTestSuite.cpp  MessageParserTestSuite.cpp  RequestHandshakeBeginTestSuite.cpp  ResponderTestSuite.cpp  SessionTestSuite.cpp  VLengthTestSuite.cpp  main.cpp
cpp/libs/ssp21/tests/fixtures/: CryptoLayerFixture.h  LinkLayerFixture.h
cpp/libs/ssp21/tests/mocks/: CryptoFixture.cpp  CryptoFixture.h  HexMessageBuilders.cpp  HexMessageBuilders.h  HexSequences.h  MockCertificateData.cpp  MockCertificateData.h  MockCryptoBackend.cpp  MockCryptoBackend.h  MockLogHandler.h  MockLowerLayer.h  MockUpperLayer.h
cpp/tests/integration/: CMakeLists.txt  CatchMain.cpp  IntegrationTestSuite.cpp  IntegrationThroughput.cpp  main.cpp
cpp/tests/integration/fixtures/: IntegrationFixture.cpp  IntegrationFixture.h  MockKeyStore.cpp  MockKeyStore.h
cpp/tests/integration/mocks/: Channel.h  LowerLayer.h  SeqValidator.h  UpperLayer.h
doc/: Pipfile  files.dox  mainpage.dox
script/: generate_preshared_keys.bat  generate_preshared_keys.sh  generate_single_level_certificates.bat  generate_single_level_certificates.sh
(+961 files in other folders)
